<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".auth.fragments.OtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:textStyle="bold"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="#9C9494"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_have_sent_an_verification_code_to_your_number"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:id="@+id/text"
        android:textAlignment="center"
        android:layout_marginHorizontal="28dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:id="@+id/phone_number"
        android:textAlignment="center"
        android:layout_marginHorizontal="28dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:weightSum="6"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            app:boxCornerRadiusTopEnd="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/gray_color"
            android:backgroundTint="?attr/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            android:padding="8dp"
            app:boxCornerRadiusTopEnd="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/gray_color"


            android:backgroundTint="?attr/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"         app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            app:boxCornerRadiusTopEnd="12dp"
            android:padding="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/gray_color"


            android:backgroundTint="?attr/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            app:boxCornerRadiusTopEnd="12dp"
            android:padding="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:textColorHint="@color/gray_color"
                android:backgroundTint="?attr/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            android:padding="8dp"
            app:boxCornerRadiusTopEnd="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:hint="@string/app_name"
            android:maxLength="1"
            android:inputType="number"
            android:textColorHint="@color/gray_color" />
        </com.google.android.material.textfield.TextInputLayout> <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:gravity="center"
            app:boxCornerRadiusTopEnd="12dp"
        android:padding="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/gray_color"
            android:backgroundTint="?attr/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>
        
    </LinearLayout>
    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_00_60"
        android:textSize="16sp"
        android:textColor="?attr/colorSecondary"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:padding="12dp"
        android:visibility="gone"
        android:background="@drawable/reset_otp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/resend_otp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verify_and_login"
        android:textAllCaps="false"
        android:id="@+id/verify_btn"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/btn_bg"/>



</LinearLayout>